samples/_failures_safe/1761654749_29e449_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a60c4144.c: In function ‘main’:
./samples/SAFE/__tmp_a60c4144.c:163:9: error: expected identifier or ‘(’ at end of input
  163 |         int u,
      |         ^~~
./samples/SAFE/__tmp_a60c4144.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a60c4144.c:163:9: error: expected declaration or statement at end of input
